--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "lottie-react": "^2.4.0",
+    "lucide-react": "^0.259.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "typewriter-effect": "^2.20.1"
   }
 }
