--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "framer-motion": "^11.11.9",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
@@ -22,9 +23,14 @@
     "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
     "react": "18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "18.2.0",
+    "react-world-flags": "^1.6.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "typewriter-effect": "^2.20.1"
+  },
+  "devDependencies": {
+    "@types/react-world-flags": "^1.6.0"
   }
 }
